--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ upload_speed = 2000000
 ; -------------------------------------------------------------------------
 lib_deps =
     SignalK/SensESP @ >=3.0.0-beta.6,<4.0.0
+    bblanchon/ArduinoJson @ ^7.0.0
     paulstoffregen/OneWire @ ^2.3.7
     milesburton/DallasTemperature @ ^3.9.0
 
