--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,7 @@ upload_speed = 2000000
 ; REQUIRED LIBRARIES
 ; -------------------------------------------------------------------------
 lib_deps =
-    SignalK/SensESP
+    SignalK/SensESP @ 3.1.1
     bblanchon/ArduinoJson @ ^7.0.0
     paulstoffregen/OneWire @ ^2.3.7
     milesburton/DallasTemperature @ ^3.9.0
