--- a/platformio.ini
+++ b/platformio.ini
@@ -1,9 +1,3 @@
-; =============================================================================
-; PlatformIO Project Configuration for SensESP Engine Monitor
-; Board: ESP32 Dev Module
-; Framework: Arduino
-; =============================================================================
-
 [platformio]
 default_envs = esp32-dev
 
@@ -15,26 +9,23 @@ board = esp32dev
 monitor_speed = 115200
 upload_speed = 2000000
 
-; -------------------------------------------------------------------------
-; REQUIRED LIBRARIES
-; -------------------------------------------------------------------------
+# Only compile the primary entry point to avoid conflicts from multiple mains
+# `src_filter` is deprecated — use `build_src_filter`.
+build_src_filter = +<main.cpp>
+
 lib_deps =
-    SignalK/SensESP @ 3.1.1
-    bblanchon/ArduinoJson @ ^7.0.0
+    SignalK/SensESP@^3.1.1
+    bblanchon/ArduinoJson@^7.0.0
     paulstoffregen/OneWire @ ^2.3.7
     milesburton/DallasTemperature @ ^3.9.0
 
-; -------------------------------------------------------------------------
-; SensESP required build flags
-; -------------------------------------------------------------------------
+
 build_flags =
     -D USE_ESP_IDF_LOG
     -D CORE_DEBUG_LEVEL=5
-    ; Needed for Arduino logging macro compatibility
     -D TAG='"Arduino"'
+    -D SENSESP_DISABLE_SYSTEM_STATUS_LED=1
 
-; Partition scheme — matches your previous setup
+
 board_build.partitions = min_spiffs.csv
-
-; ESP32 exception decoder (debugging)
 monitor_filters = esp32_exception_decoder
