successful compile with sensse esp 3.x

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,10 +15,8 @@ build_src_filter = +<main.cpp>
 
 lib_deps =
     SignalK/SensESP@^3.1.1
+    SensESP/OneWire@^3.0.2
     bblanchon/ArduinoJson@^7.0.0
-    paulstoffregen/OneWire @ ^2.3.7
-    milesburton/DallasTemperature @ ^3.9.0
-
 
 build_flags =
     -D USE_ESP_IDF_LOG
