--- a/platformio.ini
+++ b/platformio.ini
@@ -1,16 +1,33 @@
+[platformio]
+default_envs = esp32-dev
+
 [env:esp32-dev]
-platform = espressif32
-board = esp32dev
+platform = espressif32 @ ^6.9.0
 framework = arduino
+board = esp32dev
 
 monitor_speed = 115200
+upload_speed = 2000000
 
-build_flags =
-  -Wno-cpp
-  -D SENSESP_EXCLUDE_OTA
-  -D SENSESP_EXCLUDE_HW_SERIAL
+board_build.partitions = min_spiffs.csv
+
+
+# Only compile the primary entry point to avoid conflicts from multiple mains
+# `src_filter` is deprecated — use `build_src_filter`.
+build_src_filter = +<main.cpp>
 
 lib_deps =
   SignalK/SensESP@^3.1.1
-  SensESP/SensESP-OneWire@^3.0.2
+    SensESP/OneWire@^3.0.2
   bblanchon/ArduinoJson@^7.0.0
+
+build_flags =
+    -D USE_ESP_IDF_LOG
+    -D CORE_DEBUG_LEVEL=5
+    -D TAG='"Arduino"'
+    -D SENSESP_DISABLE_SYSTEM_STATUS_LED=1
+    -Wno-cpp
+
+
+
+monitor_filters = esp32_exception_decoder
