--- a/platformio.ini
+++ b/platformio.ini
@@ -2,7 +2,7 @@
 default_envs = esp32-dev
 
 [env:esp32-dev]
-platform = espressif32 @ ^6.9.0
+platform = espressif32@6.4.0
 framework = arduino
 board = esp32dev
 
@@ -11,15 +11,12 @@ upload_speed = 2000000
 
 board_build.partitions = min_spiffs.csv
 
-
-# Only compile the primary entry point to avoid conflicts from multiple mains
-# `src_filter` is deprecated — use `build_src_filter`.
 build_src_filter = +<main.cpp>
 
 lib_deps =
-  SignalK/SensESP@^3.1.1
+    SignalK/SensESP@^3.1.1
     SensESP/OneWire@^3.0.2
-  bblanchon/ArduinoJson@^7.0.0
+    bblanchon/ArduinoJson@^7.0.0
 
 build_flags =
     -D USE_ESP_IDF_LOG
@@ -27,7 +24,5 @@ build_flags =
     -D TAG='"Arduino"'
     -D SENSESP_DISABLE_SYSTEM_STATUS_LED=1
     -Wno-cpp
-
-
 
 monitor_filters = esp32_exception_decoder
