compiled, not tested

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,8 @@ build_src_filter = +<main.cpp>
 
 lib_deps =
     SignalK/SensESP@^3.1.1
-    SensESP/OneWire@^3.0.1
+    PaulStoffregen/OneWire@^2.3.7
+    milesburton/DallasTemperature@^3.11.0
     bblanchon/ArduinoJson@^7.0.0
 
 build_flags =
