--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ lib_deps =
     bblanchon/ArduinoJson@^7.0.0
 
 build_flags =
+    -std=gnu++17
     -D USE_ESP_IDF_LOG
     -D CORE_DEBUG_LEVEL=5
     -D TAG='"Arduino"'
